# bsf-lib

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  Jenkinsfile
apps/operator/app/: CMakeLists.txt  OperatorApp.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.ini  settings.qrc
apps/operator/src/: CMakeLists.txt
apps/operator/src/ui/: CMakeLists.txt
apps/pavement/app/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  pavement.app.cpp  pavement.controller.cpp  pavement.controller.h  settings.ini
apps/scale/app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  ScaleApp.cpp  mainwindow.ui  settings.ini
apps/scale/src/: CMakeLists.txt
apps/scale/src/ui/: CMakeLists.txt
src/: CMakeLists.txt  Config.cmake.in
src/appservice/: CMakeLists.txt
src/appservice/appservice.broker/: BrokerAppService.cpp  BrokerAppService.h  broker.appservice.cpp  broker.appservice.h  brokerappservice.cpp  brokerappservice.h
src/appservice/appservice.iodevices/: iodevice.appservice.cpp  iodevice.appservice.h
src/appservice/appservice.mix.recipe/: MixRecipeAppService.cpp  MixRecipeAppService.h  mixrecipeappservice.cpp
src/appservice/appservice.prepare.recipe/: PrepareRecipeAppService.cpp  PrepareRecipeAppService.h  preparerecipeappservice.cpp  preparerecipeappservice.h
src/appservice/appservice.statemachine/: LiftTransition.h  statemachine.appservice.cpp  statemachine.appservice.h
src/appservice/appservice.ui/: ui.appservice.cpp  ui.appservice.h
src/data/: CMakeLists.txt  Config.cmake.in  bsf.db  bsfdatabaseconfig.cpp  bsfdatabaseconfig.h
src/domain/: BsfWidgetEnum.h  CMakeLists.txt  Config.cmake.in  action.cpp  action.h  arduino.cpp  arduino.h  bafalog.cpp  bafalog.h  component.cpp  component.h  detectionsensor.cpp  detectionsensor.h  iodevice.cpp  iodevice.h  iodevicetype.cpp  iodevicetype.h  recipe.cpp  recipe.h  relay.cpp  relay.h  statecode.cpp  statecode.h  weightcensor.cpp  weightcensor.h
src/domain/component/: component.cpp  component.h  componentrepo.cpp  componentrepo.h
src/domain/iodevice/: detectionsensor.cpp  detectionsensor.h  iodevice.cpp  iodevice.h  iodevicerepo.cpp  iodevicerepo.h  iodeviceservice.cpp  iodeviceservice.h  iodevicetype.h  relay.cpp  relay.h  weightcensor.cpp  weightcensor.h
src/domain/material/: material.cpp  material.h
src/domain/recipe/: recipe.cpp  recipe.h  reciperepo.cpp  reciperepo.h  recipeservice.cpp  recipeservice.h
src/domain/recipe.selection/: recipeselection.cpp  recipeselection.h  recipeselectionservice.cpp  recipeselectionservice.h
src/domain/state/: stateservice.cpp  stateservice.h
src/mqtt/: CMakeLists.txt  Config.cmake.in  MqttClient.cpp  MqttClient.h  MqttSubscription.cpp  MqttSubscription.h
src/parser/: CMakeLists.txt  Config.cmake.in  transformpayload.cpp  transformpayload.h
src/repo/: CMakeLists.txt  Config.cmake.in  actionarduinorepo.cpp  actionarduinorepo.h  arduinorepo.cpp  arduinorepo.h  componentrepo.cpp  componentrepo.h  iodevicerepo.cpp  iodevicerepo.h  logrepo.cpp  logrepo.h  reciperepo.cpp  reciperepo.h  statecoderepo.cpp  statecoderepo.h
src/service/: CMakeLists.txt
src/service/broker/: BrokerService.cpp  BrokerService.h
src/service/broker/client/: MqttClient.cpp  MqttClient.h
src/service/database/: DatabaseService.cpp  DatabaseService.h
src/service/statemachine/: machine.service.cpp  machine.service.h
src/service/ui/: ui.service.cpp  ui.service.h
src/service/ui/button/: relay.button.cpp  relay.button.h
src/service/ui/fonts/: MaterialRegular.h  QFontIcon.cpp  QFontIcon.h
src/service/ui/interfaces/: sensor.widget.cpp  sensor.widget.h
src/service/ui/label/: proximity.label.cpp  proximity.label.h
src/service/ui/resource/: theme.qrc
src/service/ui/scale/: scale.lcdnumber.cpp  scale.lcdnumber.h
src/ui/: CMakeLists.txt  Config.cmake.in
src/ui/buttons/: device.pushbutton.cpp  device.pushbutton.h
src/ui/buttons/relay/: relay.button.cpp  relay.button.h
src/ui/fonts/: MaterialRegular.cpp  MaterialRegular.h  QFontIcon.cpp  QFontIcon.h
src/ui/labels/proximity/: proximity.label.cpp  proximity.label.h
src/ui/widgets/beltfeeders/: GroupBoxBeltFeeders.cpp  GroupBoxBeltFeeders.h  groupboxbeltfeeders.ui
src/ui/widgets/binloaddrop/: GroupBoxBinLoadDrop.cpp  GroupBoxBinLoadDrop.h  groupboxbinloaddrop.ui
src/ui/widgets/binrecipestatus/: GroupBoxBinRecipeStatus.cpp  GroupBoxBinRecipeStatus.h  groupboxbinrecipestatus.ui
src/ui/widgets/devicestatus/: IOWidgetStatusInterface.cpp  IOWidgetStatusInterface.h  TreeWidgetDeviceStatus.cpp  TreeWidgetDeviceStatus.h  WidgetDeviceStatus.cpp  WidgetDeviceStatus.h  treewidgetdevicestatus.ui
src/ui/widgets/experimental/: experimental.cpp  experimental.h  experimental.ui
src/ui/widgets/home/: home.cpp  home.h  home.ui
src/ui/widgets/interfaces/: IOWidgetStatusInterface.h  RecipeStatusInterface.cpp  RecipeStatusInterface.h
test/: CMakeLists.txt  CTestConfig.cmake
test/apps/scale/: CMakeLists.txt  tst_ScaleAppTest.cpp  tst_ScaleAppTest.h
test/autotest/: AutoTest.cpp  AutoTest.h
test/domain/: CMakeLists.txt  DomainAutoTest.cpp  DomainAutoTest.h  autotest.cpp  bsf.db  tst_Arduino.cpp  tst_Arduino.h  tst_Recipe.cpp  tst_Recipe.h  tst_recipe.cpp  tst_recipe.h
test/mqtt/: CMakeLists.txt  tst_mqtt.cpp  tst_mqtt.h
test/parser/: CMakeLists.txt  tst_transformpayload.cpp  tst_transformpayload.h
test/repo/: CMakeLists.txt  autotest.cpp  tst_actionarduinorepo.cpp  tst_actionarduinorepo.h  tst_arduinorepo.cpp  tst_arduinorepo.h  tst_iodevicerepo.cpp  tst_iodevicerepo.h  tst_logrepo.cpp  tst_logrepo.h  tst_reciperepo.cpp  tst_reciperepo.h  tst_statecoderepo.cpp  tst_statecoderepo.h
test/resource/: jsonPayload.qrc
test/resource/database/: bsf.db
test/resource/payload/: proximityHighLow.json  proximityStates.json  recipeComponentUpdated.json  recipeData.json  recipeUpdated.json  relayStates.json  relayStatesHighLow.json  tarePayload.json
test/ui/: CMakeLists.txt  autotest.cpp
test/ui/widgets/: tst_GroupBoxBinLoadDrop.cpp  tst_GroupBoxBinLoadDrop.h  tst_IOWidgetStatusInterfaceTest.cpp  tst_IOWidgetStatusInterfaceTest.h
(+66 files in other folders)
